# KidsEduGame

./: .gitignore  KidsEduGameUML.puml  README.md
KidsEduGame/: CMakeLists.txt  KidsEduGame.sln
KidsEduGame/GameCoreLib/: CMakeLists.txt  Dec2Roman.cpp  Facts.cpp  Menu.cpp  Quiz.cpp  RomanConverter.cpp
KidsEduGame/GameGUI/: CMakeLists.txt  GameGUI.cpp  GameGUI.h  GameGUI.qrc  GameGUI.ui  GameGUI.vcxproj  GameGUI.vcxproj.filters  main.cpp
KidsEduGame/RomanDigitalsToDecimal/: Dec2Roman.cpp  RomanDigitalsToDecimal.cpp  RomanDigitalsToDecimal.vcxproj  RomanDigitalsToDecimal.vcxproj.filters  TestConvertDecimal_2_Roman.cpp
KidsEduGame/RomanDigitalsToDecimal/x64/Debug/: Dec2Roman.h_52891297FD342CCB.ifc.dt  Dec2Roman.h_52891297FD342CCB.ifc.dt.command  Dec2Roman.h_52891297FD342CCB.ifc.dt.module.json  Dec2Roman.h_52891297FD342CCB.ifc.dt.module.json.command  Dec2Roman.h_52891297FD342CCB.ifc.isense.dt  Dec2Roman.h_52891297FD342CCB.ifc.isense.dt.command  Dec2Roman.h_52891297FD342CCB.ifc.isense.dt.d.json  RomanDigitalsToDecimal.exe.recipe  RomanDigitalsToDecimal.ilk  cstdlib_1835B9F684A1CDFF.ifc.dt  cstdlib_1835B9F684A1CDFF.ifc.dt.command  cstdlib_1835B9F684A1CDFF.ifc.dt.module.json  cstdlib_1835B9F684A1CDFF.ifc.dt.module.json.command  cstdlib_1835B9F684A1CDFF.ifc.isense.dt  cstdlib_1835B9F684A1CDFF.ifc.isense.dt.command  cstdlib_1835B9F684A1CDFF.ifc.isense.dt.d.json  ctime_F3B193396A697282.ifc.dt  ctime_F3B193396A697282.ifc.dt.command  ctime_F3B193396A697282.ifc.dt.d.json  ctime_F3B193396A697282.ifc.dt.module.json  ctime_F3B193396A697282.ifc.dt.module.json.command  ctime_F3B193396A697282.ifc.isense.dt  ctime_F3B193396A697282.ifc.isense.dt.command  iostream_6B0F20D2B67FF47A.ifc.dt.command  iostream_6B0F20D2B67FF47A.ifc.dt.module.json  iostream_6B0F20D2B67FF47A.ifc.dt.module.json.command  iostream_6B0F20D2B67FF47A.ifc.isense.dt.command  iostream_72CF6B2468A6D1DF.ifc.dt.command  iostream_72CF6B2468A6D1DF.ifc.dt.module.json  iostream_72CF6B2468A6D1DF.ifc.dt.module.json.command  iostream_72CF6B2468A6D1DF.ifc.isense.dt.command  iostream_72CF6B2468A6D1DF.ifc.isense.dt.d.json  map_EDD1DC5254E49B47.ifc.dt.command  map_EDD1DC5254E49B47.ifc.dt.d.json  map_EDD1DC5254E49B47.ifc.dt.module.json  map_EDD1DC5254E49B47.ifc.dt.module.json.command  map_EDD1DC5254E49B47.ifc.isense.dt.command  map_FF0C7C8E8E7B4C54.ifc.dt.command  map_FF0C7C8E8E7B4C54.ifc.dt.d.json  map_FF0C7C8E8E7B4C54.ifc.dt.module.json  (+20 more)
KidsEduGame/RomanDigitalsToDecimal/x64/Debug/RomanDig.775792f2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  RomanDigitalsToDecimal.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
KidsEduGame/TestforRoman2Decimal/: TestforRoman2Decimal.vcxproj  test.cpp
KidsEduGame/build-debug/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  KidsEduGame.sln  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
KidsEduGame/build-debug/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake
KidsEduGame/build-debug/GameCoreLib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GameCoreLib.sln  GameCoreLib.vcxproj  GameCoreLib.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
KidsEduGame/build-debug/GameGUI/: ALL_BUILD.vcxproj  GameGUI.sln  GameGUI.vcxproj  GameGUI.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
KidsEduGame/build-debug/GameGUI/GameGUI_autogen/EWIEGA46WW/: qrc_GameGUI.cpp
KidsEduGame/build-debug/data/: general_facts.txt  roman_numeral_facts.txt
KidsEduGame/build-debug/src/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GameCore.sln  GameCore.vcxproj  GameCore.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
KidsEduGame/build-debug/test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  GameTests.sln  GameTests.vcxproj  GameTests.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
KidsEduGame/build-release/: ALL_BUILD.vcxproj  CMakeCache.txt  CTestTestfile.cmake  KidsEduGame.sln  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
KidsEduGame/build-release/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake
KidsEduGame/build-release/GameCoreLib/: ALL_BUILD.vcxproj  GameCoreLib.sln  GameCoreLib.vcxproj  GameCoreLib.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
KidsEduGame/build-release/GameGUI/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GameGUI.sln  GameGUI.vcxproj  GameGUI.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
KidsEduGame/build-release/GameGUI/GameGUI_autogen/: mocs_compilation_Release.cpp
KidsEduGame/build-release/src/: ALL_BUILD.vcxproj  GameCore.sln  GameCore.vcxproj  GameCore.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
KidsEduGame/build-release/test/: ALL_BUILD.vcxproj  CTestTestfile.cmake  GameTests.sln  GameTests.vcxproj  GameTests.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
KidsEduGame/include/: Dec2Roman.h  Facts.h  Menu.h  Quiz.h  RomanConverter.h
KidsEduGame/src/: CMakeLists.txt  Dec2Roman.cpp  Facts.cpp  GameCore.cpp  GameCore.filters  GameCore.vcxproj  Menu.cpp  Quiz.cpp  RomanConverter.cpp  RomanDigitalsToDecimal.cpp  RomanDigitalsToDecimal.vcxproj  RomanDigitalsToDecimal.vcxproj.filters  main_console.cpp
KidsEduGame/test/: CMakeLists.txt  GameTests.vcxproj  TestForRoman2Decimal.vcxproj  test.cpp
(+6 files in other folders)
